@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2018-04-21 r74623) -- "Unsuffered Consequences"
+R Under development (unstable) (2018-04-26 r74643) -- "Unsuffered Consequences"
 Copyright (C) 2018 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -1996,6 +1996,11 @@ character(0)
 [1] 0.8 5.2
 > extendrange(x, f= 0.01) # 0.96 5.04
 [1] 0.96 5.04
+> 
+> ## extend more to the right:
+> extendrange(x, f=c(.01,.03)) # 0.96 5.12
+[1] 0.96 5.12
+> 
 > ## Use 'r' if you have it already:
 > stopifnot(identical(extendrange(r = r),
 +                     extendrange(x)))
